[tool.poetry]
name = "track_fish_eye"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "3.10"
wgpu = "^0.8.1"
glfw = "^2.5.4"
numpy = "^1.23.2"
opencv-python-headless = "^4.6.0"
scipy = "^1.9.1"
pyclustering = "^0.10.1"
numpy-quaternion = "^2022.4.2"
aioconsole = "^0.5.1"
ldpc = "^0.1.45"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyproject-flake8 = "^0.0.1-alpha.5"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
